--- a/Web-Scraping-Lab (1).ipynb
+++ b/Web-Scraping-Lab (1).ipynb
@@ -180,9 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data scraped and saved to popular-languages.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
     "# Create a pandas DataFrame from the scraped data\n",
@@ -191,7 +201,7 @@
     "# Save the DataFrame to a CSV file\n",
     "df.to_csv(\"popular-languages.csv\", index=False)\n",
     "\n",
-    "print(\"Data scraped and saved to popular-languages.csv successfully!\")"
+    "print(\"Data scraped and saved to popular-languages.csv\")"
    ]
   },
   {
